...
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="movie">Movie</string>
    <string name="tv">TV</string>
    <string name="overview">Overview</string>
    <string name="open">Check Web</string>
    <string name="year">Year</string>
</resources>
